spacing fix

--- a/styles/sass/abstract/_mediaQueries.scss
+++ b/styles/sass/abstract/_mediaQueries.scss
@@ -305,22 +305,6 @@ header{
     }
 // Projects Section
     .projects{
-        .carousel{
-        width: 95%;
-        .carouselNumDisplay{
-            padding-top: .5rem;
-        }
-        .carouselPhotos{
-        width: 52vw;
-        height: 31vh;
-        }
-        button {
-            img {
-                width: 4rem;
-                height: 4rem;
-            }
-        }
-        }
     }
 // Contact Me Section
     .contactMe{
@@ -365,21 +349,8 @@ header{
 
 // Header Section
     header{
-        nav{
-            height: 8vh;
-            padding-right: 4rem;
-            padding-left: 4rem;
-
-        }
         .headerContent{
             margin-top: 21rem;
-        }
-        .doubleArrowDown{
-            width: 6.5rem;
-            height: 6.5rem;
-            img{
-                width: 95%;
-            }
         }
     }
 // Skills Section
@@ -393,38 +364,7 @@ header{
     }
 // Projects Section
     .projects{
-        .carousel{
-        .carouselNumDisplay{
-            padding-top: 0;
-        }
-        .carouselPhotos{
-        width: 52vw;
-        height: 15vh;
-        .project{
-            display: flex;
-            justify-content: center;
-        }
-        img{
-            width: 100%;
-            height: 100%;
-            align-self: center;
-        }
-        }
-        a{
-            display: block;
-            text-align: center;
-            border-bottom: none;
-        }
-        .buttons {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            button{
-                margin-top: 1rem;
-                padding: 8px 16px;
-            }
-        }
-        }
+     
     }
 // Contact Me Section
     .contactMe{
@@ -441,5 +381,5 @@ header{
                 margin-right: 0;
             }
         }
-        }
+    }
 }
