--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1607,20 +1607,6 @@ footer i:hover, footer i:focus {
   .skills li i {
     font-size: 2.7rem;
   }
-  .projects .carousel {
-    width: 95%;
-  }
-  .projects .carousel .carouselNumDisplay {
-    padding-top: 0.5rem;
-  }
-  .projects .carousel .carouselPhotos {
-    width: 52vw;
-    height: 31vh;
-  }
-  .projects .carousel button img {
-    width: 4rem;
-    height: 4rem;
-  }
   .contactMe .wrapper {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -1655,20 +1641,8 @@ footer i:hover, footer i:focus {
   p {
     font-size: 1.6rem;
   }
-  header nav {
-    height: 8vh;
-    padding-right: 4rem;
-    padding-left: 4rem;
-  }
   header .headerContent {
     margin-top: 21rem;
-  }
-  header .doubleArrowDown {
-    width: 6.5rem;
-    height: 6.5rem;
-  }
-  header .doubleArrowDown img {
-    width: 95%;
   }
   .skills {
     padding-bottom: 28rem;
@@ -1678,48 +1652,6 @@ footer i:hover, footer i:focus {
         flex-basis: 24%;
     height: 8.5rem;
     margin-top: 3rem;
-  }
-  .projects .carousel .carouselNumDisplay {
-    padding-top: 0;
-  }
-  .projects .carousel .carouselPhotos {
-    width: 52vw;
-    height: 15vh;
-  }
-  .projects .carousel .carouselPhotos .project {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-  }
-  .projects .carousel .carouselPhotos img {
-    width: 100%;
-    height: 100%;
-    -ms-flex-item-align: center;
-        align-self: center;
-  }
-  .projects .carousel a {
-    display: block;
-    text-align: center;
-    border-bottom: none;
-  }
-  .projects .carousel .buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .projects .carousel .buttons button {
-    margin-top: 1rem;
-    padding: 8px 16px;
   }
   .contactMe .wrapper button {
     width: 100%;
